[gd_scene load_steps=2 format=3 uid="uid://bsounqkib8v7x"]

[ext_resource type="Script" path="res://addons/NetworkDebugTool/RequestRow/RequestRow.gd" id="1_cvp6p"]

[node name="RequestRow" type="HBoxContainer"]
script = ExtResource("1_cvp6p")

[node name="IconTextureRect" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 2

[node name="NameLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Request Name"

[node name="StatusLabel" type="Label" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
text = "200"
